header home and rwd

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sharp": "^2.2.32",
     "gatsby-plugin-styled-components": "^3.3.10",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.33",
     "gatsby-transformer-sharp": "^2.3.0",
+    "gsap": "^3.4.1",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
@@ -30,6 +32,8 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "set-value": "^2.0.1",
     "shopify-buy": "^2.8.0",
     "styled-components": "^5.1.1"
