--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^10.0.22",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.17.4",
+    "gatsby-cli": "^2.12.62",
     "gatsby-image": "^2.2.29",
     "gatsby-plugin-google-analytics": "^2.0.13",
     "gatsby-plugin-layout": "^1.0.11",
