--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.33",
+    "gatsby-source-shopify": "^3.2.24",
+    "gatsby-source-shopify2": "^2.0.7",
     "gatsby-transformer-sharp": "^2.3.0",
     "gsap": "^3.4.1",
     "js-yaml": "^3.13.1",
