--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
     "babel-plugin-styled-components": "^1.10.7",
+    "emailjs-com": "^2.6.3",
     "gatsby": "^2.17.4",
     "gatsby-cli": "^2.12.62",
     "gatsby-image": "^2.2.29",
