--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
+    "axios": "^0.19.2",
     "babel-plugin-styled-components": "^1.10.7",
     "emailjs-com": "^2.6.3",
     "gatsby": "^2.17.4",
@@ -32,11 +33,13 @@
     "gsap": "^3.4.1",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
+    "mapbox-gl": "^1.11.1",
     "prop-types": "^15.7.2",
     "querystringify": "^2.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-mapbox-gl": "^4.8.6",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "set-value": "^2.0.1",
