package json fix

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "author": "Alexander Hörl <alexander.horl2@live.de>",
   "engines": {
-    "node": "=> 10.13 < 10.11"
+    "node": "12.x"
   },
   "dependencies": {
     "@emotion/core": "^10.0.22",
@@ -44,7 +44,8 @@
     "redux": "^4.0.5",
     "set-value": "^2.0.1",
     "shopify-buy": "^2.8.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "vercel": "^19.2.0"
   },
   "keywords": [
     "gatsby",
