--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.1.4",
+    "@apollo/react-hooks": "^4.0.0",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
+    "apollo-boost": "^0.4.9",
+    "apollo-link": "^1.2.14",
     "axios": "^0.19.2",
     "babel-plugin-styled-components": "^1.10.7",
     "emailjs-com": "^2.6.3",
@@ -32,7 +35,10 @@
     "gatsby-source-graphql": "^2.7.1",
     "gatsby-source-shopify": "^3.2.24",
     "gatsby-transformer-sharp": "^2.3.0",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.11.0",
     "gsap": "^3.4.1",
+    "isomorphic-fetch": "^2.2.1",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.11.1",
