--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prop-types": "^15.7.2",
     "querystringify": "^2.0.0",
     "react": "^16.11.0",
+    "react-apollo": "^3.1.5",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
     "react-mapbox-gl": "^4.8.6",
